    - minor fix in configure for mmsystem.h detection on MinGW
    - Windows: look for editor plugins and Fantasia using base
      directory of liblinuxsampler dll (look in the same directory and one
      directory above)
    - configure script fix: removed unconditional use of SSE
    - fixed building with sqlite installed in a non-standard directory

  * general changes:
    - bugfix: on some POSIX systems instrument editor plugins refused to
      load as we used a non-portable Linux specific struct field
      (fixes bug #70, patch by Ronald Baljeu)
    - fixed endless loop which occured when loading an instrument editor
      plugin DLL on Windows systems failed
    - fixed memory leaks that occurred when liblinuxsampler was unloaded
    - optimized the SynchronizedConfig class so it doesn't wait
      unnecessarily long after an update
    - added support for notifying instrument editors on note-on / note-off
      events (e.g. to highlight the pressed keys on the virtual keyboard
      of gigedit)
    - added support for triggering notes by instrument editors (see above)
    - be verbose on DLL load errors (on Linux)
    - fixed di-harmonic triangle LFO implementation (this LFO implementation
      is only used by very few systems, most pick the int math
      implementation, which is usually faster)
    - fixes for audio drivers with varying buffer sizes
    - experimental support for running LinuxSampler as a DSSI, LV2 and
      VST plugin
    - notification events for stream/voice count statistics are now sent
      only when there are actual changes
    - added memory ordering constraints to improve stability on
      multi-core and multi-cpu systems
    - maximum voices and disk streams can now be altered at runtime
    - fixed CPU feature detection on x86_64 (maybe fixes #108)
    - automatic stacktrace mechanism is now turned off by default and can
      be switched on by command line option "--stacktrace" (the automatic